--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "cybernote-2",
-  "version": "0.0.1",
-  "description": "Cyber note 2 - realtime notetaking system",
+  "name": "express-test",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "express": "4.10.2",
-    "socket.io": "1.2.0"
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "ejs": "~2.5.2",
+    "express": "~4.14.0",
+    "moment": "^2.16.0",
+    "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
+    "serve-favicon": "~2.3.0"
   }
 }
